Fix CSS path in default layout and add main stylesheet with basic styles

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
   <title>{{ page.title }}</title>
   
   <!-- Fix CSS Path -->
-  <link rel="stylesheet" href="{{ site.baseurl }}/assets/main.css">
+  <link rel="stylesheet" href="../styles/main.css">
 </head>
 <body>
   <header>
