--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,15 +6,24 @@
   <title>{{ page.title }}</title>
   
   <!-- Fix CSS Path -->
-  <link rel="stylesheet" href="../styles/main.css">
+  <link rel="stylesheet" href="{{baseurl}}/styles/main.css">
 </head>
 <body>
   <header>
-    <h1>{{ site.title }}</h1>
+    <h1>{{ page.title }}</h1>
   </header>
 
   <main>
     {{ content }}
+    <ul>
+      {% for post in site.posts %}
+        <li>
+          <a href="{{ post.url }}">{{ post.title }}</a>
+          <p>{{ post.date | date: "%B %d, %Y" }}</p>
+          <p>{{ post.excerpt }}</p>
+        </li>
+      {% endfor %}
+    </ul>
   </main>
 
   <footer>
