Fix CSS path in default layout to use relative URL for stylesheet

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,8 @@
   <title>{{ page.title }}</title>
   
   <!-- Fix CSS Path -->
-  <link rel="stylesheet" href="{{baseurl}}/styles/main.css">
+  <link rel="stylesheet" href="{{ '/styles/main.css' | relative_url }}">
+
 </head>
 <body>
   <header>
